updated styles - inline

--- a/css/main.css
+++ b/css/main.css
@@ -6495,7 +6495,7 @@ button.button {
   align-items: center;
   flex-wrap: wrap;
   padding: 45px 30px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   box-shadow: 0 2px 4px 0 rgba(136, 144, 195, 0.2), 0 5px 15px 0 rgba(37, 44, 97, 0.15);
   background-color: white; }
 
